@@ -1,5 +1,8 @@
 2004-11-02  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (logview_create_window_open_file): Don't update the
+	status bar or the window title here, this is already done in log_repaint.
+
 	* info.c (RepaintLogInfo): Don't use gtk_tree_model_get_iter_root.
 
 	* logview.c (logview_menus_set_state): Desensitize menu items when
